--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ message.xml.header = <?xml version="1.0" encoding="ISO-8859-1"?><?xml-stylesheet
 message.xml.start = <Infos><Start>{0}</Start>
 message.xml.end = <End></End>
 message.xml.summary.3c = <Message>Von den {0} Dateien sind {1} valid, {2} invalid und {3} wurden nicht validiert.</Message></Process>
-message.xml.info = <Info>KOST-Converter v0.0.1, Copyright (C) 2014 Claire Roethlisberger (KOST-CECO). This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions; see GPL-3.0_COPYING.txt for details</Info></Infos>
+message.xml.info = <Info>KOST-Converter v0.0.2, Copyright (C) 2014 Claire Roethlisberger (KOST-CECO). This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions; see GPL-3.0_COPYING.txt for details</Info></Infos>
 message.xml.conergebnis = <Conversion>
 message.tiffconversion = TIFF Konvertierung
 message.pdfaconversion = PDFA Konvertierung
@@ -38,9 +38,9 @@ message.xml.valergebnis.invalid = <Invalid>invalid</Invalid>
 message.xml.valergebnis.close = </Conversion>
 
 message.xml.modul.a.pdfa = <Process><Modul>A) PDF/A-Validierung</Modul>
-message.xml.modul.b.pdfa = <Process><Modul>B) xxx</Modul>
-message.xml.modul.c.pdfa = <Process><Modul>C) PDF/A-Konvertierung</Modul>
-message.xml.modul.d.pdfa = <Process><Modul>D) PDF/A-Revalidierung</Modul>
+message.xml.modul.b.pdfa = <Process><Modul>B) PDF/A-Konvertierung</Modul>
+message.xml.modul.c.pdfa = <Process><Modul>C) PDF/A-Revalidierung</Modul>
+message.xml.modul.d.pdfa = <Process><Modul>D) PDF/A2-Rekonvertierung</Modul>
 message.xml.modul.e.pdfa = <Process><Modul>E) Visueller Vergleich</Modul>
 
 message.xml.configuration.error.1 = <Message>Das Konfigurations-File konnte nicht gelesen werden.</Message></Process>
@@ -70,13 +70,17 @@ error.xml.a.pdfa.invalid = <Message>Die PDF-Datei {0} hat die PDF/A-{1} Validier
 error.xml.a.pdfa.encryption = <Message>Die PDF-Datei ist wahrscheinlich Passwortgeschuetzt. Die nachfolgende Konvertierung koennte abgebrochen werden.</Message></Process>
 
 # Modul B Meldungen
+error.xml.b.pdfa.converted = <Message>Die PDF-Datei konnte konvertiert werden.</Message></Process>
 
 # Modul C Meldungen
-error.xml.c.pdfa.converted = <Message>Die PDF-Datei konnte konvertiert werden.</Message></Process>
+error.xml.c.pdfa.valid = <Message>Die PDF-Datei {0} hat die PDF/A-{1} Revalidierung bestanden.</Message></Process>
+error.xml.c.pdfa.invalid = <Message>Die PDF-Datei {0} hat die PDF/A-{1} Revalidierung nicht bestanden.</Message></Process>
 
 # Modul D Meldungen
+error.xml.d.pdfa.converted = <Message>Die PDF-Datei konnte konvertiert werden.</Message></Process>
 error.xml.d.pdfa.valid = <Message>Die PDF-Datei {0} hat die PDF/A-{1} Revalidierung bestanden.</Message></Process>
 error.xml.d.pdfa.invalid = <Message>Die PDF-Datei {0} hat die PDF/A-{1} Revalidierung nicht bestanden. -> Prozess abgebrochen! Manuelle Nachbearbeitung noetig.</Message></Process>
+error.xml.d.pdfa.noreconversion = <Message>Die PDF-Datei {0} kann nicht in PDF/A-2 konvertiert werden. -> Prozess abgebrochen! Manuelle Nachbearbeitung noetig.</Message></Process>
 
 # Modul E Meldungen
 error.xml.e.pdfa.equals = <Message>Die konvertiere PDF-Datei scheint optisch identisch zu sein.</Message></Process>
